--- a/Demo/Makefile
+++ b/Demo/Makefile
@@ -33,7 +33,7 @@ PREFIX_FRAMEWORK  := /Library/Frameworks/
 DIR_INC           := Foo/include/
 DIR_SRC           := Foo/source/
 DIR_RES           := Foo/
-DIR_TESTS         := Foo/tests
+DIR_TESTS         := 
 EXT_C             := .c
 EXT_H             := .h
 EXT_O             := .o
