Adding support for multiple/mixed language projects.

--- a/Demo/Makefile
+++ b/Demo/Makefile
@@ -35,6 +35,9 @@ DIR_SRC           := Foo/source/
 DIR_RES           := Foo/
 DIR_TESTS         := 
 EXT_C             := .c
+EXT_CPP           := .cpp
+EXT_M             := .m
+EXT_MM            := .mm
 EXT_H             := .h
 FILES             := $(call GET_C_FILES, $(DIR_SRC))
 FILES_TESTS       := $(call GET_C_FILES, $(DIR_TESTS))
@@ -42,7 +45,8 @@ CC                := clang
 LIBS              := 
 FLAGS_OPTIM       := Os
 FLAGS_WARN        := -Werror -Wall
-FLAGS_STD         := c99
+FLAGS_STD_C       := c99
+FLAGS_STD_CPP     := c++11
 FLAGS_OTHER       := 
 
 include ../Targets.mk
